# emme7-bot

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: .gitignore  README.md  makefile  pyproject.toml
backend/app/: Dockerfile  README.md  app.py  configs.py  consumer.py  requirements.txt  startup.py
backend/app/src/: logger_config.py
backend/app/src/agents/: graph_agents.py  sales_agent.py
backend/app/src/agents/lib_agent/: agent.py  agent_prompt_loader.py  base_context_providers.py  base_llm.py  base_memory.py  base_summary.py  message.py  tool.py
backend/app/src/agents/prompts/: sales_prompt.toml
backend/app/src/agents/tools/: lead_management.py  price_search.py
backend/app/src/controllers/: user_controllers.py
backend/app/src/controllers/webhooks/: evolution_controllers.py
backend/app/src/models/: user_models.py
backend/app/src/models/webhooks/: evolution_models.py
backend/app/src/repositories/interactions/: database.py  dependencies.py
backend/app/src/repositories/redis/: redis_crud.py
backend/app/src/services/: chatbot.py  process_audio.py  store_routing.py
backend/app/src/services/integrations/: __init__.py  google_calendar_service.py
backend/app/src/services/interactions/: chats_messages_services.py  chats_services.py  customer_leads_service.py
backend/app/src/services/price_search/: __init__.py  models.py  service.py  utils.py
backend/app/src/services/redis/: redis_services.py
backend/app/tests/: README.md  __init__.py
backend/app/tests/unit/services/: test_chatbot.py  test_store_routing.py
(+25 files in other folders)
