[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "annotated-types==0.7.0",
    "asyncio==3.4.3",
    "chainlit>=0.1.0",
    "fastapi==0.111.0",
    "fastapi-cli==0.0.7",
    "idna==3.10",
    "iniconfig==2.1.0",
    "google-api-python-client==2.154.0",
    "google-auth==2.37.0",
    "openai==1.65.4",
    "pandas==2.2.3",
    "psycopg2-binary==2.9.10",
    "pydantic>=2.11.7",
    "pydantic-core>=2.33.2",
    "pydantic-settings>=2.10.1",
    "pydub==0.25.1",
    "pymysql==1.1.1",
    "pytest==8.3.5",
    "pytz==2025.2",
    "redis==5.0.6",
    "requests==2.32.3",
    "sqlalchemy==2.0.38",
    "tomllib",
    "uvicorn==0.30.1",
]
